syntax = "proto3";

package spike;

service Spike {
    rpc GetSpikeToken(GetSpikeTokenRequest) returns (SpikeToken) {}
}

message Client {
    string id = 1;
    string secret = 2;
}


message GetSpikeTokenRequest {
    required string grant_type = 1;
    required string audience = 2;
    Client client = 3;
}


message SpikeToken{
    string token = 1;
}
